--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -55,7 +55,7 @@ ol {
 	padding-top: 64px;
 	padding-bottom: 64px;
 
-	@media #{$brkmx426}
+	@media #{$brkmx768}
 	{
 		padding-top: 24px;
 		padding-bottom: 24px;
@@ -66,9 +66,9 @@ ol {
 {
 	padding-bottom: 64px;
 
-	@media #{$brkmx426}
+	@media #{$brkmx768}
 	{
-		padding-bottom: 30px;
+		padding-bottom: 20px;
 	}
 }
 
@@ -98,7 +98,7 @@ img {
 .btn{
 	border-radius: 10px;
 	padding: 14px 32px;
-	border: 2px solid;
+	border: 2px solid $main-color;
 	margin-top: 32px;
 }
 .btn:hover{
@@ -115,10 +115,21 @@ img {
 
 .btn-primary
 {
+	background-color: $main-color;
 	&:hover{
 		background-color: transparent;
 		color: $main-color;
+		border: 2px solid $main-color;
 	}
+}
+//order hestory btn style
+.btn-light
+{
+	background-color: $white;
+	padding: 4px 48px;
+	border: none;
+	border-radius: 4px;
+	color: $main-color;
 }
 
 /*card style*/
@@ -247,21 +258,28 @@ img {
   
 	margin-bottom: 30px;
 
-	  .cart-img {
-		position: relative;
-  
-		&::after {
-		  content: "";
-		  position: absolute;
-		  top: -10px;
-		  right: -10px;
-		  background: url('../../../assets/images/cart-image/c-delete-icon.svg') no-repeat;
-		  width: 34px;
-		  height: 32px;
-		  border-radius: 50%;
-		  z-index: 1111;
-		}
+	.image-in-cart {
+		position: relative;     
+		display: inline-block;  
 	  }
+	  
+	  .image-in-cart .delete-btn {
+		position: absolute;   
+		top: -10px;               
+		right: -10px;             
+		padding: 0;
+		border: none;
+		background: transparent;
+		cursor: pointer;
+		z-index: 2;             
+	  }
+	  
+	  .image-in-cart .delete-btn img {
+		display: block;
+		width: 34px;           
+		height: 34px;
+	  }
+	  
 
 	  .c-left-text{
 		@include text-style(500,20px,20px,0%);
@@ -385,16 +403,12 @@ img {
 	margin-bottom: 24px;
 }
 .cart-text1{
-	@include text-style(700,14px,20px,0%);
+	@include text-style(500,14px,20px,0%);
 }
 
 //check-out right col style
 //Order Summary style 
 .checkout-right{
-	position: relative;
-	&::after {
-        @include msg-logo($top: 200px, $right: -60px);
-    }
 	.left-lower-part
 	{
 	  gap: 30px;
@@ -417,6 +431,18 @@ img {
 		overflow: hidden;
 		border: 1px solid #ccc;
 	  }
+	}
+  }
+
+  .checkout-right
+  {
+	flex-basis: 457px;
+
+	@media #{$brkmx1097} 
+	{
+		margin-top: 20px;
+		margin-left: auto;
+		margin-right: auto;
 	}
   }
 
@@ -459,6 +485,7 @@ img {
       padding-left: 5px;
     }
 }
+
 
   
 
