--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11224,6 +11224,7 @@ img {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0%;
+  color: #3A3A3A;
 }
 
 .checkout-right .left-lower-part {
@@ -11284,7 +11285,7 @@ img {
   border-radius: 8px;
 }
 
-.account-page-section .nav-item, .order-history-section .nav-item {
+.account-page-section .nav-item, .order-history-section .nav-item, .order-id-section .nav-item {
   padding: 10px 0px;
   font-weight: 500;
   font-size: 16px;
@@ -11292,11 +11293,11 @@ img {
   letter-spacing: 0%;
   text-align: left;
 }
-.account-page-section .nav-item:hover, .order-history-section .nav-item:hover {
+.account-page-section .nav-item:hover, .order-history-section .nav-item:hover, .order-id-section .nav-item:hover {
   background-color: #F1F7FF;
   border-radius: 10px;
 }
-.account-page-section .nav-link, .order-history-section .nav-link {
+.account-page-section .nav-link, .order-history-section .nav-link, .order-id-section .nav-link {
   color: #4A4A4A;
   padding-left: 5px;
 }
@@ -12702,6 +12703,11 @@ form {
   background-color: #F1F7FF;
   border-radius: 10px;
 }
+@media (max-width: 575.98px) {
+  .order-history-section .container-xl .order-history-right {
+    padding: 20px 20px;
+  }
+}
 .order-history-section .container-xl .order-history-right .order-history-title {
   font-weight: 500;
   font-size: 20px;
@@ -12717,4 +12723,120 @@ form {
 }
 .order-history-section .container-xl .order-history-right .delivered-col .cart-text {
   font-weight: 500;
+}
+
+/*Contact us  
+
+          page 
+
+                style*/
+.contact-us-section .container-xl .contact-us-row {
+  background-color: #F1F7FF;
+  box-shadow: 0px 5px 10px 0px rgba(25, 58, 75, 0.1019607843);
+  padding: 64px 98px;
+  border-radius: 10px;
+  gap: 30px;
+  position: relative;
+}
+@media (max-width: 767.98px) {
+  .contact-us-section .container-xl .contact-us-row {
+    padding: 0px 0;
+  }
+}
+@media (max-width: 1024px) {
+  .contact-us-section .container-xl .contact-us-row {
+    padding: 20px;
+  }
+}
+.contact-us-section .container-xl .contact-us-row::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -10px;
+  background: url("../../../assets/images/contact-us-bg.svg") no-repeat;
+  background-size: cover;
+  width: 344px;
+  height: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+@media (max-width: 767.98px) {
+  .contact-us-section .container-xl .contact-us-row::before {
+    display: none;
+  }
+}
+.contact-us-section .container-xl .contact-left-col .form-control {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0;
+  color: #3A3A3A;
+  opacity: 75%;
+  padding: 13px 10px;
+}
+.contact-us-section .container-xl .contact-left-col .get-in-touch {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  vertical-align: middle;
+  color: #3A3A3A;
+}
+.contact-us-section .container-xl .contact-left-col .get-in-touch-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0%;
+  vertical-align: middle;
+  color: #4A4A4A;
+}
+.contact-us-section .container-xl .contact-left-col .contact-wrapper {
+  margin-top: 40px;
+}
+.contact-us-section .container-xl .contact-left-col .contact-wrapper .fa-envelope-open-text {
+  font-size: 24px;
+  color: #1379FF;
+}
+.contact-us-section .container-xl .contact-right-col {
+  z-index: 11;
+}
+
+/*order id
+
+          page 
+
+                style*/
+.order-id-section .container-xl .order-id-right {
+  background-color: #F1F7FF;
+  border-radius: 10px;
+  padding: 40px 68px;
+}
+.order-id-section .container-xl .order-id {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: capitalize;
+  color: #3A3A3A;
+}
+.order-id-section .container-xl .order-place {
+  font-size: 16px;
+}
+.order-id-section .container-xl .order-price {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #3A3A3A;
+}
+.order-id-section .container-xl .selected-order {
+  padding: 16px 28px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin-top: 33px;
+}
+.order-id-section .container-xl .delivery-payment-row {
+  margin-top: 51px;
+}
+.order-id-section .container-xl .delivery-payment-row .delivery-details .order-place {
+  font-size: 14px;
 }
