--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11302,6 +11302,56 @@ img {
   padding-left: 5px;
 }
 
+.product-card-section .container-xl .tab-wrapper, .subscription-products-section .container-xl .tab-wrapper {
+  -webkit-overflow-scrolling: touch;
+  overflow-x: auto;
+  width: 100%;
+}
+.product-card-section .container-xl .nav-tabs, .subscription-products-section .container-xl .nav-tabs {
+  gap: 32px;
+  margin-bottom: 32px;
+  border-bottom: none !important;
+}
+.product-card-section .container-xl .nav-tabs .nav-link.active, .subscription-products-section .container-xl .nav-tabs .nav-link.active {
+  color: #1379FF !important;
+  border-bottom: 1px solid #1379FF;
+}
+.product-card-section .container-xl .nav-link, .subscription-products-section .container-xl .nav-link {
+  color: #4A4A4A;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  letter-spacing: 0%;
+  text-align: center;
+  border: none;
+}
+.product-card-section .container-xl .nav-link:hover, .subscription-products-section .container-xl .nav-link:hover {
+  border-bottom: 1px solid #1379FF;
+  color: #1379FF;
+}
+@media (max-width: 767.98px) {
+  .product-card-section .container-xl .nav-link, .subscription-products-section .container-xl .nav-link {
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 10px;
+    letter-spacing: 0%;
+  }
+}
+@media (max-width: 768px) {
+  .product-card-section .container-xl .tab-scroll, .subscription-products-section .container-xl .tab-scroll {
+    display: flex;
+    flex-wrap: nowrap !important;
+    white-space: nowrap;
+    gap: 10px;
+  }
+  .product-card-section .container-xl .nav-item, .subscription-products-section .container-xl .nav-item {
+    flex: 0 0 auto;
+  }
+  .product-card-section .container-xl .nav-link, .subscription-products-section .container-xl .nav-link {
+    white-space: nowrap;
+  }
+}
+
 .header-row {
   margin-top: 16px;
   margin-bottom: 12px;
@@ -11931,6 +11981,9 @@ footer .msg-button {
     line-height: 35px;
     letter-spacing: 0;
   }
+}
+.deal .deal-left .btn-outline-light {
+  border: 2px solid #fff;
 }
 .deal .deal-left .btn-outline-light:hover {
   background-color: #fff;
@@ -12811,6 +12864,11 @@ form {
   border-radius: 10px;
   padding: 40px 68px;
 }
+@media (max-width : 672px) {
+  .order-id-section .container-xl .order-id-right {
+    padding: 20px 20px;
+  }
+}
 .order-id-section .container-xl .order-id {
   font-weight: 500;
   font-size: 20px;
@@ -12834,9 +12892,61 @@ form {
   border-radius: 10px;
   margin-top: 33px;
 }
+@media (max-width : 672px) {
+  .order-id-section .container-xl .selected-order {
+    padding: 5px 0px;
+  }
+}
 .order-id-section .container-xl .delivery-payment-row {
   margin-top: 51px;
 }
 .order-id-section .container-xl .delivery-payment-row .delivery-details .order-place {
   font-size: 14px;
+}
+
+/*Subscription details
+
+          page 
+
+                style*/
+.subscription-details .container-xl .silver-plan {
+  background-color: #F1F7FF;
+  padding: 16px 24px;
+  border-radius: 10px;
+}
+.subscription-details .container-xl .silver-plan .sub-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #898989;
+}
+.subscription-details .container-xl .silver-plan .sub-price {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 20px;
+  color: #3A3A3A;
+}
+.subscription-details .container-xl .silver-plan .fa-check {
+  background-color: #1379FF;
+  height: 17px;
+  width: 17px;
+  border: 2px solid black;
+  font-size: 30px;
+}
+.subscription-details .container-xl .sub-fea-name {
+  position: relative;
+}
+.subscription-details .container-xl .sub-fea-name::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: -10px;
+  background: url("../../../assets/images/blue-check.svg") no-repeat;
+  width: 20px;
+  height: 20px;
+}
+.subscription-details .container-xl .daterangepicker {
+  border-radius: 12px;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+  font-family: "YourFont", sans-serif;
 }
