--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -491,52 +491,56 @@ img {
 
 .product-card-section, .subscription-products-section{
     .container-xl{
-        .tab-wrapper {
-           -webkit-overflow-scrolling: touch;
-           overflow-x: auto;
-           width: 100%;
-         }
-        .nav-tabs{
-            gap: 32px;
-            margin-bottom: 32px;
-            border-bottom: none !important;
+           .tab-wrapper {
+          width: 100%;
+          overflow-x: auto;
+          -webkit-overflow-scrolling: touch;
+  
+        .nav-tabs {
+          display: flex;
+          flex-wrap: nowrap;
+          gap: 32px;
+          margin-bottom: 32px;
+          border-bottom: 1px solid $small-font-text;
+          scrollbar-width: none;     
+          border-bottom: none !important;
 
-            .nav-link.active {
-              color: $main-color !important; 
-              border-bottom: 1px solid $main-color; 
+            @media #{$brkmx576} {
+              gap: 20px;
             }
-        }
-        .nav-link{
-            color: $small-font-text;
-            @include text-style(500, 20px,20px,0%);
-            text-align: center;
-            border: none;
 
-            &:hover{
-                border-bottom: 1px solid $main-color;
-                color: $main-color;
-            }
-            @media #{$brkmx768}{
-              @include text-style(300, 13px,10px,0%);
-            }
-        }
-
-        @media (max-width: 768px) {
-          .tab-scroll {
-            display: flex;
-            flex-wrap: nowrap !important;
-            white-space: nowrap;
-            gap: 10px;
-          }
-        
+          &::-webkit-scrollbar {
+            display: none;
+          }       
           .nav-item {
             flex: 0 0 auto;
-          }
-        
+          }       
           .nav-link {
             white-space: nowrap;
+            color: $small-font-text;
+            font-weight: 500;
+            text-align: center;
+            border: none;
+			padding: 0;
+			padding-bottom: 10px;
+            background-color: transparent;
+            @include text-style(500, 20px, 20px, 0%);
+            color: $heading-color;        
+            &:hover {
+              border-bottom: 2px solid $main-color;
+              color: $main-color;
+            }       
+            &.active {
+              border-bottom: 2px solid $main-color;
+              color: $main-color !important;
+            }       
+            @media #{$brkmx576} {
+              @include text-style(300, 13px, 10px, 0%);
+            }
           }
         }
+    }
+
     }
 }
 
