--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -88,7 +88,7 @@
     background-image: url('../../../assets/images/menubar-icon.svg');
     border: none;
     outline: none;
-    padding-left: 20px;
+    margin-right: 14px;
   }
 
   .navbar-nav {
