--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -1,10 +1,10 @@
 .hero-section{
   position: relative;
+  padding-top: 16px;
   //hero-row
     .hero-row
     {
       background: $bg-color;
-      @include rounded(10px);
       position: relative;
       &::before{
         content: "";
@@ -121,7 +121,6 @@
       }
 
         .swiper-slide {
-        background: $bg-color;
         font-size: 24px;
         border: 3px solid transparent;
         transition: border 0.3s;
@@ -140,6 +139,7 @@
         
         .swiper-slide-active {
           border: 2px solid #1379FF;
+          background: $bg-color;
           border-radius: 4px;
         }
   }
@@ -328,6 +328,13 @@
       filter: blur(2px) brightness(0.8);
       transform: scale(0.85);
       opacity: 0.4;
+
+      @media #{$brkmx992} {
+        filter: none;
+        transform: 0;
+        transition: none;
+        opacity: 1;
+      }
     }
 
     .swiper-slide-active,
@@ -336,6 +343,11 @@
       transform: scale(1);
       opacity: 1;
       z-index: 2;
+
+       @media #{$brkmx992} {
+        transform: 0;
+        opacity: 1;
+      }
     }
 
     .swiper-left {
@@ -458,7 +470,7 @@
     
     @media (min-width: 768px) {
       text-align: left;
-      border-right: 2px solid $main-color;
+      border-right: 2px solid rgba(19, 121, 255, 0.5);
       padding-right: 20px;
     }
 
@@ -649,7 +661,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border-radius: 13px;
+        border-radius: 10px;
         overflow: hidden;
       }
     
@@ -658,7 +670,7 @@
         max-width: 109px;
         min-height: 109px;
         object-fit: cover;
-        border-radius: 13px;
+        border-radius: 10px;
     
         &:hover {
           border: 2px solid $main-color;
@@ -1170,7 +1182,6 @@ form {
 .contact-us-section
 {
   .container-xl{
-
     .contact-us-row
     {
       background-color: $bg-color;
