--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -65,11 +65,11 @@ footer {
             right: 30px;
             transform: translateY(-50%);
             height: 48px;
-            padding: 0 16px;
+            padding: 10px 16px;
             font-size: 14px;
             border-radius: 10px;
             color: $bg-color;
-            border: 2px solid $bg-color;
+            border: 2px solid $white;
           }
           .btn-primary:hover {
             background-color: $main-color;
